--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -67,13 +67,14 @@
 
             android:layout_gravity="center"
             android:id="@+id/progressBar" />
+
         <ListView
-            android:id="@+id/listView"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
+            android:id="@+id/fileListView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
-            android:focusableInTouchMode="false" />
+            android:focusableInTouchMode="false"
+            android:visibility="gone" />
 
 
     </LinearLayout>
